# GlueWork-Tracker

./: .envrc  .gitignore  README.md  classifier_agents.py  github_scraper.py  main.py  mkdocs.yaml  pyproject.toml  reddit_scraper.py  requirements.txt  sentence_bert_vectorizer.py  stack_overflow_scraper.py
.github/actions/setup-environment/: action.yaml
.github/workflows/: build-docs.yaml  build-wheels.yaml  checks.yaml  codeql.yaml  glue_work_bot.yml  main.yaml  release.yaml  reusable_glue_work_bot.yml  run_glue_work_bot.yml
docs/: index.md
glue_work_bot/: classification_accuracy_tester.py  classifier_agents.py  config_handler.py  data_scraper.py  deepseek_tokenizer.py  github_scraper.py  glue_work_bot_config.yml  main.py  output_handler.py  sentence_bert_vectorizer.py  training_data_collector.py  vector_indexer.py  work_aggregator.py  work_distributor.py
glue_work_bot/cached_data/: mentoring_data.json
glue_work_bot/cached_data/mentoring/: mentoring_index.faiss  mentoring_test_index.faiss  mentoring_training_test_data.json
glue_work_bot/glue_work_bot_results/: contributor_list_.md  glue_work_report.md
glue_work_bot/notebooks/: mentoring_test.ipynb
glue_work_bot/one_month_flutter/: contributor_list_.md
glue_work_bot/one_week_flutter/: contributor_list_.md  glue_work_report.md
glue_work_bot/training_data/: Classification_rule_book.xlsx  mentoring_test_dataset.csv  mentoring_training_dataset.csv  quality_assurance_dataset.csv
glue_work_bot/training_data/mentoring/: mentoring_dataset.csv  mentoring_test_dataset.csv
glue_work_bot/training_data/quality_assurance/: quality_assurance_ground_truth_data.csv
glue_work_bot_data/: contributor_list.md
glue_work_bot_setup/: run_glue_work_bot.yml
glue_work_bot_setup/glue_work_bot/: README.md  glue_work_bot_config.yml
notebooks/: maintainance.ipynb  mentoring_test.ipynb
samples/: Glue Work Samples.csv
src/glue_work_bot/: classifier_agents.py  config_handler.py  data_scraper.py  glue_work_bot_config.yml  main.py  output_handler.py  sentence_bert_vectorizer.py  training_data_collector.py  work_aggregator.py  work_distributor.py
src/glue_work_bot/cached_data/mentoring/: mentoring_test_data.json
src/glue_work_bot/notebooks/: maintainance.ipynb
src/glue_work_bot/training_data/maintenance/: maintenance_dataset.csv  maintenance_ground_truth_data.csv
src/glue_work_bot/training_data/mentoring/: mentoring_dataset.csv
src/glue_work_bot/training_data/quality_assurance/: quality_assurance_dataset.csv
test/glue_work_test/: test_example.py
